Final changes before live

--- a/docs/blog/posts/v11.4.2.226.md
+++ b/docs/blog/posts/v11.4.2.226.md
@@ -5,7 +5,7 @@ date:
 
 # ATLAS 10 v11.4.2.226
 
-Experimenting with blog posts to manage release notes
+Release notes for ATLAS 10 v11.4.2.226.
 <!-- more -->
 
 ### Release Overview
