Correcting links and MA naming

--- a/docs/blog/posts/v11.4.2.226.md
+++ b/docs/blog/posts/v11.4.2.226.md
@@ -25,7 +25,7 @@ appreciate your feedback such that we can prioritise issues for future releases.
 
 ### Feedback/Support
 
-Where applicable, please contact your McLaren first-line support representative for
+Where applicable, please contact your Motion Applied first-line support representative for
 assistance.
 Submit bugs and suggestions for future releases through the ATLAS Zendesk Portal.
 
