Adding in docker links and updating announcement post

--- a/docs/blog/posts/viewer/v11.4.2.226.md
+++ b/docs/blog/posts/viewer/v11.4.2.226.md
@@ -4,21 +4,13 @@ date:
 categories:
   - Releases
 tags:
-  - ATLAS Client
+  - ATLAS Viewer
 ---
 
-# ATLAS Release: v11.4.2.226
-
-Release notes for ATLAS 10 v11.4.2.226.
-<!-- more -->
-
-## Overview
+# ATLAS Viewer Release: v11.4.2.226
 
 This release expands recorder capabilities, improves session comparison workflows, and delivers fixes for waveform and PCU dash display.
-
-## Feedback & Support
-
-Contact your Motion Applied support representative or submit bugs via the ATLAS Zendesk Portal.
+<!-- more -->
 
 ## New Features
 
@@ -40,3 +32,7 @@ Contact your Motion Applied support representative or submit bugs via the ATLAS 
 - **Export Tool**: Issues with exporting timed laps to SSN2/SQL Race and file replacement.
 - **Waveform**: Refresh issue when switching Compare modes; workaround: change zoom level.
 - **Platform**: Multiple PGVs with same ID unsupported; engine synchronous logging config issue; compare mode not copying all parameter settings.
+
+## Feedback & Support
+
+Contact your Motion Applied support representative or submit bugs via the ATLAS Zendesk Portal.
