--- a/docs/blog/posts/viewer/v11.4.3.239.md
+++ b/docs/blog/posts/viewer/v11.4.3.239.md
@@ -4,20 +4,19 @@ date:
 categories:
   - Releases
 tags:
-  - ATLAS Client
+  - ATLAS Viewer
 ---
 
-# ATLAS Release: v11.4.3.239
+# ATLAS Viewer Release: v11.4.3.239
 
-Release notes for ATLAS 10 v11.4.3.239.
+This release focuses on bug fixes and usability improvements for the ATLAS telemetry analysis software.
 <!-- more -->
 
-This release focuses on bug fixes and usability improvements for the ATLAS telemetry analysis software. Key updates include:
+## Key updates
 
 - **New Feature:** Copy histogram visualizations directly to the clipboard.
 - **Bug Fixes:** Improvements to scatterplot pairing, trace offset in distance mode, session end time handling, telemetry data spikes, UI overflow, plugin loading, and alarm functionality for live sessions.
 - **Known Issues:** .NET 6 rounding differences, export tool limitations, waveform refresh problems, and platform-specific constraints.
-
 
 ## Feedback & Support
 
