added more info for atlas release notes

--- a/docs/blog/posts/viewer/11.4.4.691-W04.md
+++ b/docs/blog/posts/viewer/11.4.4.691-W04.md
@@ -19,6 +19,10 @@ This release introduces new unit definitions, enhances the Stream Recorder funct
 
 Added TAG-700, TAG-510 and TAG-700/HSL-500 to unit definitions.
 
+### Automation API – Method to find SessionKey
+
+Added SessionKey string property in SessionBase class.
+
 ## Bug Fixes
 
 ### Filter Type not saved in Scatterplot
@@ -42,6 +46,10 @@ Auto exported SSN2 files intermittently contain missing or incomplete data due t
 Fixed an issue where the recorder would fail to switch and sessions appear stuck. Sessions now transition reliably with proper state management, ensuring old sessions close gracefully, new sessions begin only afterward, and the ATLAS recorder status updates from Recording → Idle → Recording.
 
 For more information on the ATLAS Stream Recorder, please refer to the [documentation](../../../key-functionality/visualise/atlas/handling-data/recorders/stream-recorder.md).
+
+### Event Display
+
+Resolved an issue where event display was performing heavy synchronous processing when adding parameter data, resulting in poor performance.
 
 ## Support
 
